--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: java
 jdk: oraclejdk8
 addons:
-  organization: "edoreld-test-github"
-  token:
-    secure: $SONAR_TOKEN
+  sonarcloud:
+    organization: "edoreld-test-github"
+    token:
+      secure: $SONAR_TOKEN
 script:
-  - ./runSonarQubeAnalysis.sh
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
 cache:
   directories:
   - "$HOME/.m2"
