--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ addons:
     token:
       secure: $SONAR_TOKEN
 script:
-  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
+  - mvn -Dsonar.login=$SONAR_TOKEN clean org.jacoco:jacoco-maven-plugin:prepare-agent package sonar:sonar
 cache:
   directories:
   - "$HOME/.m2"
