--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ jdk: oraclejdk8
 addons:
   sonarcloud:
     organization: "edoreld-test-github"
-    token:
-      secure: $SONAR_TOKEN
+    secure:
+      token: $SONAR_TOKEN
 script:
-  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
+  - mvn -Dsonar.login=$SONAR_TOKEN -Dsonar.password= clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
 cache:
   directories:
   - "$HOME/.m2"
