--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ addons:
     organization: edoreld-test-github
     token: "$SONAR_TOKEN"
 script:
-- mvn -Dsonar.login=$SONAR_TOKEN -Dsonar.password= clean org.jacoco:jacoco-maven-plugin:prepare-agent
+- mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent
   install sonar:sonar
 cache:
   directories:
