--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ addons:
     organization: edoreld-test-github
     token: "$SONAR_TOKEN"
 script:
-- mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent
+- mvn -Dsonar.projectKey=edoreld-test_Dauphine-Open-Data -Dsonar.organization=edoreld-test-github -Dsonar.host.url=https://sonarcloud.io   -Dsonar.login=$SONAR_TOKEN clean org.jacoco:jacoco-maven-plugin:prepare-agent
   install sonar:sonar
 cache:
   directories:
